Se mejoro el responsive de las cards

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div>
 
   <div class="container">
-    <div class="card">
+    <div class="card masajes-pie">
       <img src="/IMG/masaje pie .jpeg">
       <h4>Masajes de pie 30'</h4>
       <p>Los masajes de pie de 30 minutos se basan en la creencia de que los pies son una representación en miniatura de todo el cuerpo, y al estimular y masajear los puntos específicos en los pies, se puede influir positivamente en el funcionamiento de los órganos y sistemas correspondientes.</p>
@@ -97,25 +97,16 @@
     <div class="carousel-item active">
       <img src="/IMG/Carousel1.jpeg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Shiatsu Terapéutico</h5>
-        <p>Un masaje shiatsu enfocado en abordar dolencias específicas y 
-          desequilibrios corporales, utilizando técnicas de presión y estiramientos para aliviar el dolor y promover la curación.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="/IMG/Carousel2.jpeg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Shiatsu Tradicional</h5>
-        <p>El masaje shiatsu clásico que se basa en la presión de los dedos, las palmas 
-          y los pulgares en puntos específicos del cuerpo para equilibrar la energía y promover la relajación.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="/IMG/Carousel3.jpeg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Shiatsu Facial</h5>
-        <p>Un masaje shiatsu aplicado en el rostro y la cabeza, 
-          que ayuda a relajar los músculos faciales, reducir la tensión y mejorar la circulación, promoviendo una apariencia rejuvenecida./p>
       </div>
     </div>
   </div>
