--- a/contacto.html
+++ b/contacto.html
@@ -13,21 +13,21 @@
 
         <!-- 
     ENCABEZADO
- -->
+-->
         
- <header class="container-fluid bg-warning d-flex justify-content-center">
+<header class="container-fluid bg-warning d-flex justify-content-center">
     <p class="text-light mb-0 p-2 fs-6">Contactanos: (+54) 11-69507918</p>
- </header>
+</header>
 
- <nav class="navbar navbar-expand-lg bg-body-tertiary p-3" id="menu">
+<nav class="navbar navbar-expand-lg bg-body-tertiary p-3" id="menu">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-       <span class="text-warning fs-14 fw-bold">Shiatsu</span> 
+    <a class="navbar-brand" href="#">
+    <span class="text-warning fs-14 fw-bold">Shiatsu</span> 
     </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
@@ -42,17 +42,17 @@
         </ul>
 
         <form class="d-flex" role="search">
-         <img class="img-fluid"src="./IMG/logo shiatsu.jpeg" alt="logosia" height="80px" width="80px">
+        <img class="img-fluid"src="./IMG/logo shiatsu.jpeg" alt="logosia" height="80px" width="80px">
         </form>
-      </div>
     </div>
-  </nav>
+    </div>
+</nav>
 
 <!-- FORMULARIO -->
 
 <div class="contacto">
     <div class="formulario">
-        <h3>Contacto</h3>
+        <h3>Solicitá tu turno!</h3>
         <form>
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required><br><br>
@@ -67,17 +67,15 @@
                 <h3>Teléfono</h3>
                 <p>(+54) 11-69507918</p>
                 <h3>Redes Sociales</h3>
-                <ul>
-                    <li><img src="./IMG/facebook.png" width="20px" style="margin-right: 5%" alt="logofacebook"><a href="https://www.facebook.com/siamotos">Facebook</a></li>
-                    <li><img src="./IMG/whatsapp.png" width="20px" style="margin-right: 5%" alt="logowhatsapp"><a href="#">Whatsapp</a></li>
-                    <li><img src="./IMG/instagram.png" width="20px" style="margin-right: 5%" alt="logoinstragram"><a href="https://www.instagram.com/siamotos/?hl=es">Instagram</a></li>
-                </ul>
+                    <ul><img src="./IMG/facebook.png" width="20px" style="margin-right: 5%" alt="logofacebook"><a href="https://www.facebook.com/siamotos">Facebook</a></ul>
+                    <ul><img src="./IMG/whatsapp.png" width="20px" style="margin-right: 5%" alt="logowhatsapp"><a href="#">Whatsapp</a></ul>
+                    <ul><img src="./IMG/instagram.png" width="20px" style="margin-right: 5%" alt="logoinstragram"><a href="https://www.instagram.com/siamotos/?hl=es">Instagram</a></ul>
             </div>
 </div>
 
 
 
- 
+
 <br><br>
 <footer>
     <h6 class="parrafo"> &#169 Copyright Desarrollado por Sebastian Sosa</h6>
